syntax = "proto3";

package gis.protobuf;

message Coordinate2D {
    float x = 1;
    float y = 2;
}

message Coordinate3D {
    float x = 1;
    float y = 2;
    float z = 3;
}
