let coordinate = require('./gis/protobuf/coordinate_pb');
module.exports.Coordinate2D = coordinate.Coordinate2D;
module.exports.Coordinate3D = coordinate.Coordinate3D;
let point = require('./gis/protobuf/point_pb');
module.exports.Point2D = point.Point2D;
module.exports.Point3D = point.Point3D;
module.exports.MultiPoint2D = point.MultiPoint2D;
module.exports.MultiPoint3D = point.MultiPoint3D;
let linestring = require('./gis/protobuf/linestring_pb');
module.exports.LineString2D = linestring.LineString2D;
module.exports.LineString3D = linestring.LineString3D;
module.exports.MultiLineString2D = linestring.MultiLineString2D;
module.exports.MultiLineString3D = linestring.MultiLineString3D;
let polygon = require('./gis/protobuf/polygon_pb');
module.exports.Polygon2D = polygon.Polygon2D;
module.exports.Polygon3D = polygon.Polygon3D;
module.exports.MultiPolygon2D = polygon.MultiPolygon2D;
module.exports.MultiPolygon3D = polygon.MultiPolygon3D;
